# ls-apexdyn

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cpp
docs/: decisions.md
include/: DirectoryInspection.h  Drivetrain.h  IniValueParsing.h  InspectionOutcome.h  TorqueCurve.h  VehicleLoadResult.h  VehicleLoader.h  VehicleParameters.h
src/: DirectoryInspection.cpp  Drivetrain.cpp  IniValueParsing.cpp  TorqueCurve.cpp  VehicleLoader.cpp  main.cpp
tests/: AllTests.cpp  TestConfig.h.in  VehicleLoaderTests.cpp
tests/fixtures/sample_vehicle/: car.ini  drivetrain.ini  suspensions.ini  tyres.ini
